fix contact page entry content margin and spacing

--- a/themes/sacre-davey/sass/_contact-page.scss
+++ b/themes/sacre-davey/sass/_contact-page.scss
@@ -17,16 +17,23 @@
 	.entry-content {
 		@include display-flex(center, center);
 		margin: 0 auto;
+		flex-wrap: wrap;
 
-		div {
-			flex:1 0 45%;
-		}
-
+	 p:first-child,
+	 p:nth-child(2) {
+	 	width: 80%;
+	 }
 		
 	}
 }
 
 .wpcf7 {
+	width: 29vw;
+	flex: none;
+
+	form {
+		width: 100%;
+	}
 	input {
 		width: 250px;
 		border:3px solid $color__dark-blue;
@@ -41,6 +48,10 @@
 		background: $color__dark-blue;
 		box-shadow: none;
 	}
+}
+
+iframe {
+	width: 50vw;
 }
 
 .offices-wrapper {
@@ -60,7 +71,7 @@
 	}
 	.office-address {
 		width: 200px;
-		p{
+		p {
 			line-height: 1.25;
 		}
 	}
